# dbt_netsuite

./: .gitignore  CHANGELOG.md  README.md  dbt_project.yml  packages.yml  pyproject.toml
.circleci/: config.yml
docs/: catalog.json  manifest.json  run_results.json
integration_tests/: dbt_project.yml  requirements.txt
integration_tests/ci/: profiles.yml  sample.profiles.yml
models/: _netsuite__models.yml  netsuite__balance_sheet.sql  netsuite__budget_details.sql  netsuite__employee_utilization.sql  netsuite__income_statement.sql  netsuite__inventory_details.sql  netsuite__project_job_details.sql  netsuite__time_entry_details.sql  netsuite__transaction_details.sql
